--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-some little farts
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Practica HTML</title>
+    <style>
+        li strong{
+            color: rgb(0, 0, 0);
+        }
+        </style>
+        <style>
+            h2{
+                color: chartreuse;
+            }
+        </style>
+        <style>
+            p{
+                color: brown;
+            }
+        </style>
+        <style>
+            p strong{
+                color: blue;
+            }
+        </style>
+        <style>
+            body{
+                background-color: rgba(207, 96, 96, 0.781);
+            }
+        </style>
+    </head>
+    <body>
+        <header>Practica Prog. en ambiente Cliente Serv 6B </header>
+        <h1>Ya es jueves ALV</h1>
+        <img src="lawyercat.jpg" alt=""
+        width="400"
+         height="350">
+        <section> <Strong>En este ejercicio aprenderas CSS (o eso creo)</Strong></section>
+        <footer></footer>    
+        <ul>
+        <li><h2>TEMA 1</h2></li>    
+        <p>INTRODUCCION A HTML y CSS</p>
+        <li><h2>TEMA 2</h2></li>    
+        <p>IINTRODUCCION <Strong>CSS</Strong></p>
+        <li><h3><strong>TEMA 3</strong></h3></li>
+        <p>INTRODUCCION JS</p>
+        </ul>
+    </body>
+    </html>
