--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <body>
         <header>Practica Prog. en ambiente Cliente Serv 6B </header>
         <h1>Ya es jueves ALV</h1>
-        <img src="lawyercat.jpg" alt=""
+        <img src="lawyercat.jpeg" alt=""
         width="400"
          height="350">
         <section> <Strong>En este ejercicio aprenderas CSS (o eso creo)</Strong></section>
