--- a/index.html
+++ b/index.html
@@ -4,48 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica HTML</title>
-    <style>
-        li strong{
-            color: rgb(0, 0, 0);
-        }
-        </style>
-        <style>
-            h2{
-                color: chartreuse;
-            }
-        </style>
-        <style>
-            p{
-                color: brown;
-            }
-        </style>
-        <style>
-            p strong{
-                color: blue;
-            }
-        </style>
-        <style>
-            body{
-                background-color: rgba(207, 96, 96, 0.781);
-            }
-        </style>
-    </head>
-    <body>
-        <header>Practica Prog. en ambiente Cliente Serv 6B </header>
-        <h1>Ya es jueves ALV</h1>
-        <img src="lawyercat.jpeg" alt=""
-        width="400"
-         height="350">
-        <section> <Strong>En este ejercicio aprenderas CSS (o eso creo)</Strong></section>
-        <footer></footer>    
-        <ul>
-        <li><h2>TEMA 1</h2></li>    
-        <p>INTRODUCCION A HTML y CSS</p>
-        <li><h2>TEMA 2</h2></li>    
-        <p>IINTRODUCCION <Strong>CSS</Strong></p>
-        <li><h3><strong>TEMA 3</strong></h3></li>
-        <p>INTRODUCCION JS</p>
-        </ul>
+    <title>Tarea en HTML5</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="contenedor">
+        <header>
+            <h1>HTML Y CSS MATERIA ITVO</h1>
+        </header>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li>
+                    <a target="_blank" href="https://zeusssza.wixsite.com/blogauditoria">Blog</a>
+                </li>
+                <li>
+                    <a href="https://github.com/ZeusAxelB11">Contacto</a>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="salto"></div>
+
+        <section id="contenido">
+            <article>
+                <h2>Tema 1</h2>
+                <p>El inicio de 3 guerra mundial</p>
+            </article>
+
+            <article>
+                <h2>Tema 2</h2>
+                <p>Memes de la 3 guerra mundial</p>
+            </article>
+
+            <article>
+                <h2>Tema 3</h2>
+                <p>Call of Duty ya tendra nuevo contenido!</p>
+            </article>
+
+            <article>
+                <h2>Tema 4</h2>
+                <p>Agradecido de no vivir en estos momentos en Europa</p>
+            </article>
+        </section>
+
+        <aside>
+            <h2>Barra Lateral</h2>
+            <form>
+                <input type="search" name="" id="">
+                <input type="button" value="Buscar">
+            </form>
+        </aside>
+
+        <div class="salto"></div>
+
+        <footer>
+            Zeus Axel Bustos Alavez &copy; 2022
+        </footer>
+    </div>
     </body>
     </html>
